# dendrite

./: .gitignore  Cargo.toml  README.md  build.rs
dendrite/: Cargo.toml  README.md  setenv-sample.sh
dendrite-auth/: Cargo.toml  README.md  build.rs
dendrite-auth/proto/: auth.proto
dendrite-auth/src/: dendrite_config.rs  lib.rs
dendrite-elasticsearch/: Cargo.toml  README.md
dendrite-elasticsearch/src/: lib.rs  replica.rs  utils.rs
dendrite-lib/: Cargo.toml  build.rs
dendrite-lib/etc/: settings-sample.sh
dendrite-lib/notes/: streaming-trait.md
dendrite-lib/proto/axon_server/: event.proto
dendrite-lib/proto/issue/: outboundstream.proto
dendrite-lib/src/: issue.rs  lib.rs
dendrite-lib/src/axon_server/: command.rs  common.rs  control.rs  event.rs  mod.rs  query.rs
dendrite-lib/src/axon_utils/: command_submit.rs  command_worker.rs  connection.rs  event_processor.rs  event_query.rs  handler_registry.rs  mod.rs  query_processor.rs
dendrite-macros/: Cargo.toml  README.md
dendrite-macros/src/: lib.rs
dendrite-mongodb/: Cargo.toml  README.md
dendrite-mongodb/src/: lib.rs  replica.rs  utils.rs
dendrite/src/: intellij_work_around.rs  lib.rs
dendrite/src/axon_server/: common.rs  control.rs  event.rs  query.rs
dendrite/src/axon_utils/: query_submit.rs
docker/rust/: Dockerfile
etc/: settings-sample.sh
proto/axon_server/: command.proto  common.proto  control.proto  query.proto
src/: intellij_work_around.rs  lib.rs  main.rs
src/axon_server/: command.rs  mod.rs
src/axon_utils/: command_submit.rs  command_worker.rs  connection.rs  event_processor.rs  event_query.rs  handler_registry.rs  handler_registry_mut.rs  mod.rs  query_processor.rs  query_submit.rs
src/example_api/: mod.rs
src/example_command/: mod.rs
src/example_event/: mod.rs
src/example_query/: mod.rs
