[package]
name = "dendrite"
version = "0.1.2"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Event Sourcing and CQRS in Rust with AxonServer."
readme = "README.md"
homepage = "https://github.com/dendrite2go/rustic-dendrite"
repository = "https://github.com/dendrite2go/rustic-dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3.0"
bytes = "1.0.1"
futures-core = "0.3.8"
futures-util = "0.3.5"
log = "0.4.11"
prost = "0.6"
tokio = { version = "0.2", features = ["macros","time"] }
tonic = "0.3.1"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.2"