[package]
name = "dendrite"
version = "0.3.0"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Event Sourcing and CQRS in Rust with AxonServer."
readme = "README.md"
homepage = "https://github.com/dendrite2go/rustic-dendrite"
repository = "https://github.com/dendrite2go/rustic-dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "^1.0"
async-lock = "^2.3"
async-stream = "^0.3"
bytes = "^1.0"
futures-core = "^0.3"
futures-util = "^0.3"
log = "^0.4"
lru = "^0.6"
prost = "^0.7"
tokio = { version = "^1.0", features = ["macros","time"] }
tonic = "^0.4"
uuid = { version = "^0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "^0.4"