[package]
name = "dendrite_auth"
version = "0.8.0"
authors = ["Jeroen van Maanen"]
edition = "2021"
description = "Support for JWT based authentication / authorization in rustic-dendrite"
readme = "README.md"
homepage = "https://github.com/rustigaan/dendrite"
repository = "https://github.com/rustigaan/dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer", "JWT"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "^1.0"
dendrite_lib = { version = "0.11.0", path = "../dendrite-lib" }
dendrite_macros = { version = "0.5.0", path = "../dendrite-macros" }
jwt = "^0.16"
lazy_static = "^1.4"
log = "^0.4"
pem = "^1.1"
prost = "^0.11"
rand_core = "^0.6"
rsa = "^0.7"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
sha2 = { version = "^0.10", features = ["oid"] }
sshkeys = "^0.3"
tonic = "^0.8"

[build-dependencies]
tonic-build = "^0.8"
