[package]
name = "dendrite_lib"
version = "0.12.0"
authors = ["Jeroen van Maanen"]
edition = "2021"
description = "Event Sourcing and CQRS in Rust with AxonServer."
readme = "README.md"
homepage = "https://github.com/rustigaan/dendrite"
repository = "https://github.com/rustigaan/dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "^1.0"
async-channel = "^1.7"
async-lock = "^2.3"
async-stream = "^0.3"
bytes = "^1.0"
futures = "^0.3"
futures-core = "^0.3"
futures-util = "^0.3"
log = "^0.4"
lru = "^0.8"
mockall = "^0.11"
prost = "^0.11"
regex = "^1.5"
serde = { version = "~1", features = ["derive"] }
tokio = { version = "^1.0", features = ["macros","time","signal"] }
tonic = "^0.8"
tower = "^0.4"
uuid = { version = "^1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "^0.8"