[package]
name = "dendrite_macros"
version = "0.4.0"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Macros to improve ergonomics of the dendrite crate."
readme = "README.md"
homepage = "https://github.com/rustigaan/dendrite"
repository = "https://github.com/rustigaan/dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/Cargo.*", "/README.md", "/LICENSE"]

[lib]
proc-macro = true

[dependencies]
anyhow = "^1.0"
log = "^0.4"
proc-macro2 = "1.0.26"
quote = "^1.0"
syn = { version = "^1.0", features = ["full","extra-traits"] }
