[package]
name = "dendrite_mongodb"
version = "0.1.0"
authors = ["Jeroen van Maanen"]
edition = "2021"
description = "Support for MongoDB in dendrite"
readme = "README.md"
homepage = "https://github.com/rustigaan/dendrite"
repository = "https://github.com/rustigaan/dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer", "mongodb"]
categories = ["web-programming"]
include = ["/src/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "^1.0"
async-channel = "^2.1"
bytes = "^1.0"
dendrite_lib = { version = "0.13.0", path = "../dendrite-lib" }
dendrite_macros = { version = "0.5.0", path = "../dendrite-macros" }
log = "^0.4"
mongodb = { version = "^2.3", features = ["bson-serde_with"] }
prost = "^0.11"
serde = "~1"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1.51"
