[package]
name = "dendrite"
version = "0.8.0"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Event Sourcing and CQRS in Rust with AxonServer."
readme = "README.md"
homepage = "https://github.com/rustigaan/dendrite"
repository = "https://github.com/rustigaan/dendrite"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[features]
default = ["dendrite_macros"]
auth = ["dendrite_auth"]
all = ["default", "auth"]

[dependencies]
dendrite_auth = { version = "0.6.0", path = "../dendrite-auth", optional = true }
dendrite_lib = { version = "0.8.0", path = "../dendrite-lib" }
dendrite_macros = { version = "0.4.0", path = "../dendrite-macros", optional = true }
